--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,16 +21,24 @@
 }
 
 .navbar__div-logo {
-    background-color: #fff;
+    /* background-color: #fff; */
     /* margin-bottom: 20px; */
-    padding: 30px;
+    /* padding: 30px; */
     
 }
 
 .navbar__div-logo img {
     display: block;
-    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
     width: 100%;
+    border-radius: 5px;
+    transition: margin 1s;
+}
+
+.navbar__div-logo img:hover{
+    margin: 0;
+ 
 }
 
 .navbar__menu {
