Modificacion title head

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head', {title: "Maxico Srl - Posis 2.0"}) %>
+<%- include('partials/head', {title: "FA & FA Posis 2.0 M.G"}) %>
 
     <body>
         <div class="container">
