--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/login.css"/>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Maxico Posis 2.0 / Login</title>
+    <title>FA & FA Posis 2.0 M.G / Login</title>
 </head>
 <body>
     <div class="container animate__animated animate__fadeIn animate__faster">
