--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head', {title: "Maxico Srl - Posis 2.0"}) %>
+<%- include('partials/head', {title: "FA & FA Posis 2.0 M.G"}) %>
 
     <body>
         <div class="container">
